--- a/menu.html
+++ b/menu.html
@@ -37,14 +37,14 @@
 
         <div class="menu-item">
             <h3>Spaghetti Bolognese</h3>
-            <img src="assets/images/IMG4.jpg" alt="Spaghetti Bolognese">
+            <img src="assets/images/img4.jpg" alt="Spaghetti Bolognese">
             <p>$9</p>
             <button class="order-btn" data-item="Spaghetti Bolognese">Order Now</button>
         </div>
 
         <div class="menu-item">
             <h3>Fresh Juice</h3>
-            <img src="assets/images/IMG4.jpg" alt="Fresh Juice">
+            <img src="assets/images/img3.jpg" alt="Fresh Juice">
             <p>$3</p>
             <button class="order-btn" data-item="Fresh Juice">Order Now</button>
         </div>
