--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav>
-    <div class="logo">TastyBite 🍔</div>
+    <div class="logo"><EM>TastyBite </EM>🍔</div>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
