--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </nav>
 
 <section class="hero">
-    <h1>Welcome to TastyBite</h1>
+    <h1><STRong>>Welcome to TastyBite</STRong</h1>
     <p>Fresh Food, Great Taste, Best Service</p>
     <a href="menu.html" class="btn">View Our Menu</a>
 </section>
