--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </section>
 
 <section class="about">
-    <h2>About Us</h2>
+    <h2><EM>About Us</EM></h2>
     <p>
         We serve high-quality meals made with fresh ingredients.
         Our mission is to provide delicious food and excellent service
