--- a/menu.html
+++ b/menu.html
@@ -48,6 +48,12 @@
             <p>$3</p>
             <button class="order-btn" data-item="Fresh Juice">Order Now</button>
         </div>
+        <div class="menu-item">
+    <h3>Chicken Wrap</h3>
+    <img src="assets/images/IMG5.jpgUPDATE" alt="Chicken Wrap">
+    <p>$7</p>
+    <button class="order-btn" data-item="Chicken Wrap">Order Now</button>
+</div>
     </div>
 </section>
 
