--- a/menu.html
+++ b/menu.html
@@ -54,6 +54,12 @@
     <p>$7</p>
     <button class="order-btn" data-item="Chicken Wrap">Order Now</button>
 </div>
+<div class="menu-item">
+    <h3>Grilled Steak</h3>
+    <img src="assets/images/img6.jpg" alt="Grilled Steak">
+    <p>$15</p>
+    <button class="order-btn" data-item="Grilled Steak">Order Now</button>
+</div>
     </div>
 </section>
 
