--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,12 @@
             <img src="assets/images/IMG1.jpg" alt="Beef Burger">
             <p>$8</p>
             <button class="order-btn" data-item="Beef Burger">Order Now</button>
-        </div>
+        </div><div class="menu-item">
+    <h3>Caesar Salad</h3>
+    <img src="assets/images/img7.jpg" alt="Caesar Salad">
+    <p>$6</p>
+    <button class="order-btn" data-item="Caesar Salad">Order Now</button>
+</div>
 
         <div class="menu-item">
             <h3>Margherita Pizza</h3>
@@ -34,6 +39,7 @@
             <p>$10</p>
             <button class="order-btn" data-item="Margherita Pizza">Order Now</button>
         </div>
+        
 
         <div class="menu-item">
             <h3>Spaghetti Bolognese</h3>
@@ -41,6 +47,12 @@
             <p>$9</p>
             <button class="order-btn" data-item="Spaghetti Bolognese">Order Now</button>
         </div>
+        <div class="menu-item">
+    <h3>Chocolate Cake</h3>
+    <img src="assets/images/img8.jpg" alt="Chocolate Cake">
+    <p>$5</p>
+    <button class="order-btn" data-item="Chocolate Cake">Order Now</button>
+</div>
 
         <div class="menu-item">
             <h3>Fresh Juice</h3>
