--- a/menu.html
+++ b/menu.html
@@ -62,7 +62,7 @@
         </div>
         <div class="menu-item">
     <h3>Chicken Wrap</h3>
-    <img src="assets/images/IMG5.jpgUPDATE" alt="Chicken Wrap">
+    <img src="assets/images/IMG5.jpg" alt="Chicken Wrap">
     <p>$7</p>
     <button class="order-btn" data-item="Chicken Wrap">Order Now</button>
 </div>
