--- a/menu.html
+++ b/menu.html
@@ -73,6 +73,21 @@
     <button class="order-btn" data-item="Grilled Steak">Order Now</button>
 </div>
     </div>
+    >
+
+    <div class="menu-item">
+      <h3>Fried Chicken</h3>
+      <img src="assets/images/img9.jpg" alt="Fried Chicken">
+      <p>$11</p>
+      <button class="order-btn" data-item="Fried Chicken">Order Now</button>
+    </div>
+
+    <div class="menu-item">
+      <h3>Ice Cream</h3>
+      <img src="assets/images/img10.jpg" alt="Ice Cream">
+      <p>$4</p>
+      <button class="order-btn" data-item="Ice Cream">Order Now</button>
+    </div>
 </section>
 
 <footer>
