--- a/menu.html
+++ b/menu.html
@@ -21,17 +21,20 @@
     <h2>Our Menu</h2>
 
     <div class="menu-container">
+
         <div class="menu-item">
             <h3>Beef Burger</h3>
             <img src="assets/images/IMG1.jpg" alt="Beef Burger">
             <p>$8</p>
             <button class="order-btn" data-item="Beef Burger">Order Now</button>
-        </div><div class="menu-item">
-    <h3>Caesar Salad</h3>
-    <img src="assets/images/img7.jpg" alt="Caesar Salad">
-    <p>$6</p>
-    <button class="order-btn" data-item="Caesar Salad">Order Now</button>
-</div>
+        </div>
+
+        <div class="menu-item">
+            <h3>Caesar Salad</h3>
+            <img src="assets/images/img7.jpg" alt="Caesar Salad">
+            <p>$6</p>
+            <button class="order-btn" data-item="Caesar Salad">Order Now</button>
+        </div>
 
         <div class="menu-item">
             <h3>Margherita Pizza</h3>
@@ -39,7 +42,6 @@
             <p>$10</p>
             <button class="order-btn" data-item="Margherita Pizza">Order Now</button>
         </div>
-        
 
         <div class="menu-item">
             <h3>Spaghetti Bolognese</h3>
@@ -47,12 +49,13 @@
             <p>$9</p>
             <button class="order-btn" data-item="Spaghetti Bolognese">Order Now</button>
         </div>
+
         <div class="menu-item">
-    <h3>Chocolate Cake</h3>
-    <img src="assets/images/img8.jpg" alt="Chocolate Cake">
-    <p>$5</p>
-    <button class="order-btn" data-item="Chocolate Cake">Order Now</button>
-</div>
+            <h3>Chocolate Cake</h3>
+            <img src="assets/images/img8.jpg" alt="Chocolate Cake">
+            <p>$5</p>
+            <button class="order-btn" data-item="Chocolate Cake">Order Now</button>
+        </div>
 
         <div class="menu-item">
             <h3>Fresh Juice</h3>
@@ -60,40 +63,53 @@
             <p>$3</p>
             <button class="order-btn" data-item="Fresh Juice">Order Now</button>
         </div>
+
         <div class="menu-item">
-    <h3>Chicken Wrap</h3>
-    <img src="assets/images/IMG5.jpg" alt="Chicken Wrap">
-    <p>$7</p>
-    <button class="order-btn" data-item="Chicken Wrap">Order Now</button>
+            <h3>Chicken Wrap</h3>
+            <img src="assets/images/IMG5.jpg" alt="Chicken Wrap">
+            <p>$7</p>
+            <button class="order-btn" data-item="Chicken Wrap">Order Now</button>
+        </div>
+
+        <div class="menu-item">
+            <h3>Grilled Steak</h3>
+            <img src="assets/images/img6.jpg" alt="Grilled Steak">
+            <p>$15</p>
+            <button class="order-btn" data-item="Grilled Steak">Order Now</button>
+        </div>
+
+        <div class="menu-item">
+            <h3>Fried Chicken</h3>
+            <img src="assets/images/img9.jpg" alt="Fried Chicken">
+            <p>$11</p>
+            <button class="order-btn" data-item="Fried Chicken">Order Now</button>
+        </div>
+
+        <div class="menu-item">
+            <h3>Ice Cream</h3>
+            <img src="assets/images/img10.jpg" alt="Ice Cream">
+            <p>$4</p>
+            <button class="order-btn" data-item="Ice Cream">Order Now</button>
+        </div>
+        <div class="menu-item">
+    <h3>Tea</h3>
+    <img src="assets/images/img11.jpg" alt="Tea">
+    <p>$2</p>
+    <button class="order-btn" data-item="Tea">Order Now</button>
 </div>
+
 <div class="menu-item">
-    <h3>Grilled Steak</h3>
-    <img src="assets/images/img6.jpg" alt="Grilled Steak">
-    <p>$15</p>
-    <button class="order-btn" data-item="Grilled Steak">Order Now</button>
+    <h3>Biriani</h3>
+    <img src="assets/images/img12.jpg" alt="Biriani">
+    <p>$13</p>
+    <button class="order-btn" data-item="Biriani">Order Now</button>
 </div>
-    </div>
-    >
 
-    <div class="menu-item">
-      <h3>Fried Chicken</h3>
-      <img src="assets/images/img9.jpg" alt="Fried Chicken">
-      <p>$11</p>
-      <button class="order-btn" data-item="Fried Chicken">Order Now</button>
-    </div>
 
-    <div class="menu-item">
-      <h3>Ice Cream</h3>
-      <img src="assets/images/img10.jpg" alt="Ice Cream">
-      <p>$4</p>
-      <button class="order-btn" data-item="Ice Cream">Order Now</button>
     </div>
 </section>
-
-<footer>
-    <p>© 2026 TastyBite Restaurant | All Rights Reserved</p>
-</footer>
 
 <script src="script.js"></script>
 </body>
 </html>
+
