--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
+<!-- NAVBAR -->
 <nav>
-    <div class="logo"><EM>TastyBite </EM>🍔</div>
+    <div class="logo">TastyBite 🍔</div>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
@@ -17,21 +18,20 @@
     </ul>
 </nav>
 
+<!-- HERO -->
 <section class="hero">
-    <h1><Em><STRong>Welcome to TastyBite</STRong></Em></h1>
-    <p>Fresh Food, Great Taste, Best Service</p>
+    <h1>Welcome to TastyBite</h1>
+    <p>Fresh food, great taste, best service!</p>
     <a href="menu.html" class="btn">View Our Menu</a>
 </section>
 
+<!-- ABOUT -->
 <section class="about">
-    <h2><EM>About Us</EM></h2>
-    <p>
-        We serve high-quality meals made with fresh ingredients.
-        Our mission is to provide delicious food and excellent service
-        in a warm and friendly atmosphere.
-    </p>
+    <h2>About Us</h2>
+    <p>We serve high-quality meals made with fresh ingredients. Our mission is to provide delicious food and excellent service in a warm and friendly atmosphere.</p>
 </section>
 
+<!-- FOOTER -->
 <footer>
     <p>© 2026 TastyBite Restaurant | All Rights Reserved</p>
 </footer>
