--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,8 @@
 <section class="menu">
     <h2>Our Menu</h2>
 
-    <div class="menu-container">
+    <div id="menuContainer"></div>
+
 
         <div class="menu-item">
             <h3>Beef Burger</h3>
